[package]
name = "tokio-appsync-events"
authors = ["Chase Colman <chase@chase.dev>"]
description = "Publish and subscribe to AWS AppSync Events using the websocket API"
version = "0.1.0"
edition = "2024"
categories = ["web-programming::websocket", "api-bindings"]
keywords = ["aws", "appsync", "events", "websocket", "stream"]
license = "MPL-2.0"
repository = "https://github.com/chase/tokio-appsync-events"

[badges]
maintenance = { status = "experimental" }

[dependencies]
aws-config = "1.6.2"
aws-credential-types = "1.2.3"
aws-sigv4 = "1.3.1"
base64 = "0.22.1"
futures-util = { version = "0.3.31", features = ["sink"] }
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tokio-websockets = { version = "0.11.4", features = [
    "rustls-native-roots",
    "client",
    "aws_lc_rs",
    "rand",
] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
rand = "0.9.1"
dashmap = "6.1.0"
tokio-stream = "0.1.17"
clap = { version = "4.5.37", features = ["derive"], optional = true }
chrono = { version = "0.4.41", optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["fmt"], optional = true }

[features]
server = [
    "tokio-websockets/server",
    "tokio/signal",
    "dep:clap",
    "dep:chrono",
    "dep:tracing",
    "dep:tracing-subscriber",
]
tracing-subscriber = ["dep:tracing-subscriber"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "subscribe_iam"
path = "examples/subscribe_iam.rs"

[[example]]
name = "repeated_connect"
path = "examples/repeated_connect.rs"
required-features = ["server"]

[[bin]]
name = "mock-appsync-server"
path = "src/bin/mock_appsync_server.rs"
required-features = ["server"]
